# SurviveAfterBomb

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  exec.txt  makefile  strategy.json  survivors.json
.cache/clangd/index/: app.cpp.D071624076F6FCBD.idx  app.hpp.67D52D095D02A698.idx  main.cpp.2C5D452E29D106F8.idx  survivor.cpp.A4F6FFC99695CE97.idx  survivor.hpp.01477A5201C54A42.idx
include/: app.hpp  events.hpp  food.hpp  item.hpp  medkit.hpp  repiratoryMask.hpp  survivor.hpp  variables.hpp  water.hpp
src/: app.cpp  events.cpp  food.cpp  main.cpp  medkit.cpp  respiratoryMask.cpp  survivor.cpp  variables.cpp  water.cpp
